cmake_minimum_required(VERSION 3.0)
project(tadis)

SET(CMAKE_CXX_STANDARD 20)
SET(EXECUTABLE_OUTPUT_PATH  ${PROJECT_SOURCE_DIR}/bin)

# For clangd ccls lsp
SET(CMAKE_COMMON_FLAGS "${CMAKE_COMMON_FLAGS} -Wall -DCMAKE_EXPORT_COMPILE_COMMANDS=1")
IF(DEBUG)
    MESSAGE("DEBUG has been set as TRUE")
    ADD_DEFINITIONS(-DENABLE_DEBUG)
ENDIF()

SET(CMAKE_CXX_FLAGS ${CMAKE_COMMON_FLAGS})
SET(CMAKE_C_FLAGS ${CMAKE_COMMON_FLAGS})
MESSAGE("CMAKE_CXX_FLAGS is " ${CMAKE_CXX_FLAGS})
INCLUDE_DIRECTORIES("${PROJECT_SOURCE_DIR}/src/" SYSTEM)
ADD_EXECUTABLE(tadis ${PROJECT_SOURCE_DIR}/src/bin/main.cc)
ADD_EXECUTABLE(lex_test ${PROJECT_SOURCE_DIR}/src/tests/lex_test.cc)
#  target_link_libraries(boost)